--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "home/.vim/bundle/syntastic"]
 	path = home/.vim/bundle/syntastic
 	url = git://github.com/scrooloose/syntastic.git
+[submodule "home/.vim/bundle/pathogen"]
+	path = home/.vim/bundle/pathogen
+	url = git://github.com/tpope/vim-pathogen.git
