Add .rbenv-version to the global .gitignore file

--- a/home/.gitignore
+++ b/home/.gitignore
@@ -1,4 +1,5 @@
 # To set this up as your global .gitignore:
-#     $ git config --global core.excludesfile ~/.gitignore
+# $ git config --global core.excludesfile ~/.gitignore
 
 .rvmrc
+.rbenv-version
