--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "home/.vim/colors"]
-	path = home/.vim/colors
-	url = git://gist.github.com/1523432
 [submodule "home/.vim/bundle/syntastic"]
 	path = home/.vim/bundle/syntastic
 	url = git://github.com/scrooloose/syntastic.git
@@ -40,3 +37,6 @@
 [submodule "home/.vim/bundle/vim-fugitive"]
 	path = home/.vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "home/.vim/bundle/railscat/colors"]
+	path = home/.vim/bundle/railscat/colors
+	url = git@gist.github.com:1523432.git
