Don't draw bold text in bright colors in iTerm

--- a/home/.iterm2/com.googlecode.iterm2.plist
+++ b/home/.iterm2/com.googlecode.iterm2.plist
@@ -1151,7 +1151,7 @@
 			<key>Use Bold Font</key>
 			<true/>
 			<key>Use Bright Bold</key>
-			<true/>
+			<false/>
 			<key>Vertical Spacing</key>
 			<real>1</real>
 			<key>Visual Bell</key>
