--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "home/.vim/bundle/solarized"]
 	path = home/.vim/bundle/solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "home/.vim/bundle/vim-jst"]
+	path = home/.vim/bundle/vim-jst
+	url = git://github.com/briancollins/vim-jst.git
