set -g default-command "reattach-to-user-namespace -l ${SHELL}"

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,6 @@ set-option -g pane-base-index 1
 
 # Set the escape-time to 1 to remove the delay when sending commands.
 set-option -gs escape-time 1
+
+# Use reattach to user namespace (for clipboard support in Neovim)
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
