--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,6 @@ set-option -gs escape-time 1
 
 # Use reattach to user namespace (for clipboard support in Neovim)
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+# 256 colors in tmux
+set -g default-terminal "screen-256color"
