--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,3 +32,7 @@ bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux past
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+run '~/.tmux/plugins/tpm/tpm'
