tmux: install tmux-sensible, clean up duplicate config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,15 +5,6 @@ set-option -g prefix C-a
 set-option -g base-index 1
 set-option -g pane-base-index 1
 
-# Set the escape-time to 1 to remove the delay when sending commands.
-set-option -gs escape-time 1
-
-# Use reattach to user namespace (for clipboard support in Neovim)
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-
-# 256 colors in tmux
-set -g default-terminal "screen-256color"
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
@@ -35,4 +26,5 @@ bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 run '~/.tmux/plugins/tpm/tpm'
