Enable mouse/trackpad scrolling for tmux and vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
+# Enable mouse/trackpad scrolling
+set -g mouse on
+
 # List of plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
