--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "nvim/pack/plugins/start/ale"]
 	path = nvim/pack/plugins/start/ale
 	url = git@github.com:w0rp/ale.git
+[submodule "nvim/pack/plugins/start/vim-rhubarb"]
+	path = nvim/pack/plugins/start/vim-rhubarb
+	url = git@github.com:tpope/vim-rhubarb.git
