Clear the right side of the tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,9 @@ bind-key '"' split-window -v -c "#{pane_current_path}"
 # Enable mouse/trackpad scrolling
 set -g mouse on
 
+# Clear right side of status bar
+set -g status-right ''
+
 # List of plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
