--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,4 +24,12 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 run '~/.tmux/plugins/tpm/tpm'
+
+# Automatically restore the last session when tmux is started
+set -g @continuum-restore 'on'
+
+# Restore vim sessions
+set -g @resurrect-strategy-nvim 'session'
