--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,16 +8,10 @@ set-option -g pane-base-index 1
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Bind ']' to use pbpaste
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+# Use 'v' to begin selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+# Use 'y' to yank to system clipboard
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Open new windows and splits in the current path
 bind-key c new-window -c "#{pane_current_path}"
